2005-01-24 Magnus Hagdorn
 * added 2d integration code

2005-01-03 Magnus Hagdorn
 * a bunch of stuff for transport code

2004-12-19 Magnus Hagdorn
 * added EIS driver
 * changed bedrock erosion factor to something somewhat more
   reasonable

2004-12-18 Magnus Hagdorn
 * added random topo

2004-12-17 Magnus Hagdorn
 * added tests and documentation
 * erosion.f90: implemented isostatic adjustment and erosion update frequency
 * erosion_setup.f90: get erosion update frequency
 * erosion_types.f90: added variables for isostasy

2004-12-16 Magnus Hagdorn
 * first stab at simple erosion model